--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>html/map.html</file>
+        <file>html/fmap.html</file>
     </qresource>
 </RCC>
